Fixed padding/margin issues on firefox.

--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -38,10 +38,12 @@ $foodpills: #FA6900;
 @mixin nomargins() {
     -webkit-margin-before: 0;
     -webkit-margin-after: 0;
+    margin: 0;
 }
 
 @mixin nopadding() {
     -webkit-padding-start: 0;
+    padding: 0;
 }
 
 @mixin ellipsis {
