--- a/app/styles/confiture.scss
+++ b/app/styles/confiture.scss
@@ -70,7 +70,7 @@ ul.playlist-content {
     @include nomargins();
     @include nopadding();
 
-    list-style: none;
+    list-style-type: none;
 }
 
 li.song {
